--- a/css/style.css
+++ b/css/style.css
@@ -67,3 +67,12 @@ button:active {
 
     background-color: #5f0202ee;
 }
+
+[data-operand], 
+[data-equals] {
+    color: greenyellow;
+}
+
+[data-delete] {
+    color: #be0505ee;
+}
