--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: black;
-    height: 760px;
+    min-height: 760px;
     width: 500px;
     margin-top: 110px;
     align-items: center;
@@ -20,11 +20,13 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    width: 450px;
-    height: 110px;
+    width: 460px;
+    min-height: 100px;
     background-color: #404040;
     margin-top: 20px;
     gap: 5px;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 .showOperation {
@@ -39,8 +41,15 @@ body {
     margin: 0;
 }
 
+.lower-case {
+    color: #d6d4d4;
+    font-size: 40px;
+    margin: 0;
+}
+
 .buttons-panel {
     margin-top: 30px;
+    padding-bottom: 25px;
 }
 
 button {
